--- a/flex-header/style.css
+++ b/flex-header/style.css
@@ -1,35 +1,40 @@
-@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+flex-grow: 0;
+flex-shrink: 0;
 }
 
 body {
-  font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(203, 195, 206);
+  background-color: rgb(192, 184, 201);
 }
 
 .header {
-  font-family: 'Times New Roman', Times, serif;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #ebe8ee;
   padding: 10px 20px;
+  background-color: rgb(232, 225, 235);
+  border-bottom: #663399;
 }
 
 .logo {
-  font-weight: bold;
-  font-size: 2em;
+  font-weight: bolder;
   color: #663399;
+  font-family:"Besley";
+  font-size: large;
 }
 
 .links {
-  display: flex;
-  list-style: none;
-  gap: 20px;
+ display: flex;
+ align-items: flex-start;
+ list-style: none;
+ align-self: flex-start;
+ align-self: center;
+ gap: 10px;
 }
 
 .links a {
@@ -38,21 +43,36 @@ body {
 }
 
 .notifications {
-  background-color: #663399;
-  color: white;
   border: none;
   border-radius: 5px;
   padding: 5px 15px;
   cursor: pointer;
-  font-size: 0.9em;
+  font-size: 1rem;
+  background-color: #663399;
+  color: aliceblue;
+ flex-wrap: nowrap;
+ box-shadow: inset 2px 2px 2px rgb(rgb(0, 0, 0), rgb(0, 0, 0), rgb(0, 0, 0));
+position: relative;
+
+}
+.aviso{
+  background-color: red;
+  color: aliceblue;
+  display: flex;+
+  height: 24px;
+  width: 24px;
+border-radius: 50%;
+position: absolute;
+bottom: 10px;
 }
 
 .profile-image {
-  width: 40px;
-  height: 40px;
-  background-color: #663399;
-  border-radius: 50%;
-  margin-left: 15px;
+width: 40px;
+height: 40px;
+background-color: #663399;
+border-radius: 50%;
+margin-left: 15px;
+ 
 }
 
 .header > .links {
