--- a/flex-layout-2/style.css
+++ b/flex-layout-2/style.css
@@ -1,30 +1,83 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
+  display: flex;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0;
   min-height: 100vh;
+  flex-direction: column;
+  
 }
 
 header {
+  font-size: 40px;
+  font-weight: bold;
   height: 72px;
   background: darkmagenta;
   color: white;
-}
+margin-top: 10px;
+width: 100%;
 
+}
+main{
+  display: flex;
+  flex: 1;
+}
 footer {
-  height: 72px;
+  width: 100%;
+  bottom: 0;
+  height: 50px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+  position: fixed;
 }
 
 aside {
   width: 300px;
+  
   background: royalblue;
-  box-sizing: border-box;
+  align-items: stretch;
+  margin-bottom: 10px;
+
 }
 
+aside nav ul{
+  list-style: none;
+ 
+}
+aside nav ul li{
+  margin-bottom: 15px;
+ 
+}
+aside nav ul li a{
+  text-decoration: none;
+  color: #eee;
+}
+section{
+  flex: 1;
+  flex-wrap: wrap;
+  padding: 20px;
+  gap: 20px;
+}
 .card {
+  align-items: flex-start;
+ margin: 20px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+  height: 300px;
+  width: 300px;
 }
+section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem;
+  flex: 1;
+
+}
+
