--- a/flex-layout/style.css
+++ b/flex-layout/style.css
@@ -1,29 +1,96 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-body {
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Roboto";
+}
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-img {
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px 20px;
+  background-color: #ffffff;
 }
 
-button {
+.header .left-links,
+.header .right-links,
+.footer .left-links,
+.footer .right-links {
+  gap: 20px;
+}
+.buttons {
+    gap: 10px;
+    margin-top: 20px;
 }
 
-input {
-}
+.buttons button{
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+   }
 
+.buttons button:hover {
+  background-color: #464646;
+}
 .content {
-}
-
-a {
-}
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 100px;
+    align-items: center;
+  
+   
+  }
+  .content input{
+    border-radius: 100px;
+    width: 100%;
+    padding: 10px;
+    width: 250px;
+    border: 2px solid #ccc;
+    border-radius: 100px;
+    margin-top: 20px;
+    
+   
+  }
+  .content img {
+    width: 450;
+    margin-bottom: 20px;
+  }
+  
 
 .header,
 .footer {
-}
-
-.footer {
+    display: flex;
+    padding: 10px 100px;
+    gap: 20px;
+    justify-content: space-between;
+  }
+a,
+ a {
+  text-decoration: none;
+  color: #464646;
 }
 
 ul {
+    list-style: none;
+    display: flex;
+    gap: 15px;
 }
+.footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #e0e0e0;
+    
+  }
+
